--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "http-status": "^1.5.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
