--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "http-status": "^1.5.0"
+    "http-status": "^1.5.0",
+    "nodemon": "^2.0.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
