--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "http-status": "^1.5.0",
-    "nodemon": "^2.0.13"
+    "http-status": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.2",
+    "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
