--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "http-status": "^1.5.0"
+    "http-status": "^1.5.0",
+    "knex": "^0.95.11",
+    "mysql": "^2.18.1",
+    "objection": "^2.2.16"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
