--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
+    "jsonschema": "^1.4.0",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
     "objection": "^2.2.16"
